使用 Glimpse 的测试.

--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -2,28 +2,58 @@
     ViewBag.Title = "Home Page";
 }
 
+
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>MVC5 例子代码</h1>
+
+    <p class="lead">
+        
+    </p>
+    
 </div>
 
+
 <div class="row">
-    <div class="col-md-4">
+
+    <div class="col-md-3">
+        <h2> Glimpse 管理 </h2>
+        <p>
+            需要通过 NuGet， 安装 Glimpse.MVC5
+        </p>
+        <p><a class="btn btn-default" href='/glimpse.axd'>  Glimpse 管理  </a></p>
+    </div>
+
+    <div class="col-md-3">
+        <h2> Test Glimpse </h2>
+        <p>
+            测试 Glimpse 的处理结果.
+        </p>
+        <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestGlimpse")'>  Test Glimpse </a></p>
+    </div>
+
+
+
+
+    <div class="col-md-3">
         <h2> Test Async </h2>
         <p>
-            
+            测试 async 的相关处理.
         </p>
         <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestAsync")'>  Test Async  </a></p>
     </div>
     
 
-    <div class="col-md-4">
+    <div class="col-md-3">
         <h2> Test Chart </h2>
         <p>
-
+            测试 System.Web.Helpers.Chart, 生成简单的图表.
         </p>
         <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestChart")'>  Test Chart  </a></p>
     </div>
+
+
+    
+
+
 
 </div>
