W1030_Mvc_WebApi2 Update

--- a/W1030_Mvc_WebApi2/Views/Home/Index.cshtml
+++ b/W1030_Mvc_WebApi2/Views/Home/Index.cshtml
@@ -17,8 +17,11 @@
         </p>
     </div>
 
-    <div class="col-md-4">
 
+    <div class="col-md-4">
+        <p>
+            <a href='@Url.Action(actionName: "TestValues", controllerName: "Home")'> 测试 Values (有安全设置) </a>
+        </p>
     </div>
 
 
