W1050_Mvc5 增加 DisplayMode 处理的例子

--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -52,8 +52,18 @@
     </div>
 
 
-    
+</div>
 
 
+
+<div class="row">
+
+    <div class="col-md-3">
+        <h2> Test DisplayMode </h2>
+        <p>
+            测试 DisplayMode 的相关处理. 用于自动跳转 桌面/平板/手机 页面.
+        </p>
+        <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestMobile")'>  Test DisplayMode  </a></p>
+    </div>
 
 </div>
