--- a/W1050_Mvc5/Views/TestMobile/Index.cshtml
+++ b/W1050_Mvc5/Views/TestMobile/Index.cshtml
@@ -44,3 +44,22 @@
 <div>
     <a href="/TestMobile/TestErrorPage"> 尝试触发一个错误 ...</a>
 </div>
+
+
+
+
+<div>
+
+
+    <a href="/TestMobile/Index?display=mobile"> 用户自己要求，切换到手机页面. 并且后续页面都是 【手机页面】 </a>
+    <br/>
+    <a href="/TestMobile/Index?display=tablet"> 用户自己要求，切换到平板电脑页面. 并且后续页面都是 【平板电脑页面】 </a>
+
+</div>
+
+
+<div>
+
+    @Html.Action(actionName: "TestPartialView")
+
+</div>
