--- a/W1050_Mvc5/Views/TestMobile/Index.mobile.cshtml
+++ b/W1050_Mvc5/Views/TestMobile/Index.mobile.cshtml
@@ -28,6 +28,27 @@
         </div>
         
 
+
+
+
+        <div>
+
+
+            <a href="/TestMobile/Index?display=pc"> 用户自己要求，切换到PC页面. 并且后续页面都是 【pc页面】 </a>
+            <br />
+            <a href="/TestMobile/Index?display=tablet"> 用户自己要求，切换到平板电脑页面. 并且后续页面都是 【平板电脑页面】 </a>
+
+        </div>
+
+
+
+
+        <div>
+
+            @Html.Action(actionName: "TestPartialView")
+
+        </div>
+
     </div>
 </body>
 </html>
