W1010_Mvc_Session Update

--- a/W1010_Mvc_Session/Views/Home/Index.cshtml
+++ b/W1010_Mvc_Session/Views/Home/Index.cshtml
@@ -27,3 +27,20 @@
 可下载一个 SQLite Expert Personal 3 查询数据库的数据.
 </p>
 
+
+
+<hr/>
+
+
+<ul>
+    <li>
+        @Html.ActionLink(linkText: "Session 测试 (使用 Html.ActionLink)", actionName: "Index", controllerName: "TestSession")
+    </li>
+
+    <li>
+        <a href="/TestSession/Index"> Session 测试 (直接写 a href ， 在浏览器禁用 Cookie 的情况下， 将发生问题. ) </a>
+    </li>
+
+</ul>
+
+
