W1050_Mvc5 add i18n sample

--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -66,4 +66,14 @@
         <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestMobile")'>  Test DisplayMode  </a></p>
     </div>
 
+
+    <div class="col-md-3">
+        <h2> Test i18n </h2>
+        <p>
+            测试国际化的相关处理.
+        </p>
+        <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "Testi18n")'>  Test i18n  </a></p>
+    </div>
+
+
 </div>
