--- a/W1050_Mvc5/Views/Shared/_Layout.cshtml
+++ b/W1050_Mvc5/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
 ﻿<!DOCTYPE html>
+@{
+    string lang = System.Threading.Thread.CurrentThread.CurrentCulture.Name;
+}
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -25,6 +28,15 @@
                     <li>@Html.ActionLink("关于", "About", "Home")</li>
                     <li>@Html.ActionLink("联系方式", "Contact", "Home")</li>
                 </ul>
+
+                <ul class="nav navbar-right">
+                    <li>
+                        <select id="changeLang">
+                            <option value="zh">中文</option>
+                            <option value="en">English</option>
+                        </select>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -39,5 +51,21 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    
+
+    <script>
+        $(document).ready(function () {
+
+            $("#changeLang").val("@(lang)");
+
+            $("#changeLang").change(function () {
+                var vSelectValue = $(this).val();
+                var url = window.location.href;
+                url = url.replace(/\/@(lang)\//, '/' + vSelectValue + '/');
+                window.location = url;
+            });
+
+        });
+</script>
 </body>
 </html>
