W1030_Mvc_WebApi2 Add i18n sample

--- a/W1030_Mvc_WebApi2/Views/Home/Index.cshtml
+++ b/W1030_Mvc_WebApi2/Views/Home/Index.cshtml
@@ -27,3 +27,13 @@
 
 
 </div>
+
+
+<div class="row">
+    <div class="col-md-4">
+        <p>
+            <a href='@Url.Action(actionName: "TestI18n", controllerName: "Home")'> 测试国际化处理 (WebApi) </a>
+        </p>
+    </div>
+
+</div>
