Web API Add CacheOutput Test

--- a/W1030_Mvc_WebApi2/Views/Home/Index.cshtml
+++ b/W1030_Mvc_WebApi2/Views/Home/Index.cshtml
@@ -36,4 +36,12 @@
         </p>
     </div>
 
+
+    <div class="col-md-4">
+        <p>
+            <a href='@Url.Action(actionName: "TestCacheOutput", controllerName: "Home")'> 测试在 在ASP.NET WebAPI 中使用缓存 </a>
+        </p>
+    </div>
+
+
 </div>
