--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -76,4 +76,13 @@
     </div>
 
 
+    <div class="col-md-3">
+        <h2> Test Bundle </h2>
+        <p>
+            测试 Bundle 压缩脚本的相关处理.
+        </p>
+        <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestBundle")'>  Test Bundle  </a></p>
+    </div>
+
+
 </div>
