W1050_Mvc5 add typescript

--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -85,4 +85,15 @@
     </div>
 
 
+
+    <div class="col-md-3">
+        <h2> Test TypeScript </h2>
+        <p>
+            测试在 ASP.NET MVC 项目中， 使用 TypeScript
+        </p>
+        <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestTypeScript")'>  Test TypeScript  </a></p>
+    </div>
+
+
+
 </div>
