MVC5 DisplayMode and OutputCache

--- a/W1050_Mvc5/Views/TestMobile/Index.mobile.cshtml
+++ b/W1050_Mvc5/Views/TestMobile/Index.mobile.cshtml
@@ -28,6 +28,18 @@
         </div>
         
 
+        <div>
+            <a href="/TestMobile/TestOutputCache"> 测试有【OutputCache】的情况. </a>
+        </div>
+
+
+        <div>
+            <a href="/TestMobile/TestOutputCacheVaryByCustom"> 测试【OutputCache + VaryByCustom 】的情况. </a>
+        </div>
+
+        <div>
+            <a href="/TestMobile/TestOutputCacheVaryByHeader"> 测试【OutputCache + VaryByHeader 】的情况. </a>
+        </div>
 
 
 
@@ -48,6 +60,10 @@
             @Html.Action(actionName: "TestPartialView")
 
         </div>
+
+
+
+
 
     </div>
 </body>
