--- a/W1050_Mvc5/Views/TestMobile/Index.tablet.cshtml
+++ b/W1050_Mvc5/Views/TestMobile/Index.tablet.cshtml
@@ -26,6 +26,18 @@
         </div>
 
 
+        <div>
+            <a href="/TestMobile/TestOutputCache"> 测试有【OutputCache】的情况. </a>
+        </div>
+
+        <div>
+            <a href="/TestMobile/TestOutputCacheVaryByCustom"> 测试【OutputCache + VaryByCustom 】的情况. </a>
+        </div>
+
+        <div>
+            <a href="/TestMobile/TestOutputCacheVaryByHeader"> 测试【OutputCache + VaryByHeader 】的情况. </a>
+        </div>
+
 
 
         <div>
