--- a/W1030_MVC_ActionFilter/Views/Home/Index.cshtml
+++ b/W1030_MVC_ActionFilter/Views/Home/Index.cshtml
@@ -31,6 +31,12 @@
         <li>
             @Html.ActionLink(linkText: "测试 TidyHtml Filter", actionName: "TestTidyHtml")
         </li>
+
+
+
+        <li>
+            @Html.ActionLink(linkText: "测试 IActionFilter / IResultFilter 执行顺序", actionName: "HelloWorld")
+        </li>
     </ul>
 
 
