--- a/W1050_Mvc5/Views/Shared/_Layout.cshtml
+++ b/W1050_Mvc5/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - 我的 ASP.NET 应用程序</p>
+            <p>
+                @Request.UserAgent
+            </p>
         </footer>
     </div>
 
