--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -93,7 +93,18 @@
         </p>
         <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestTypeScript")'>  Test TypeScript  </a></p>
     </div>
+</div>
 
 
+
+<div class="row">
+
+    <div class="col-md-3">
+        <h2> Test Error </h2>
+        <p>
+            测试自定义错误页面
+        </p>
+        <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestError")'>  Test Error  </a></p>
+    </div>
 
 </div>
