W1050_Mvc5 Add Ajax Sample

--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -107,4 +107,14 @@
         <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestError")'>  Test Error  </a></p>
     </div>
 
+
+    <div class="col-md-3">
+        <h2> Test Ajax </h2>
+        <p>
+            测试复杂的 Ajax 调用流程
+        </p>
+        <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestAjax")'>  Test Ajax  </a></p>
+    </div>
+
+
 </div>
