W1050_Mvc5 Update Typescript and gulp test use

--- a/W1050_Mvc5/Views/TestTypeScript/SubMenu.cshtml
+++ b/W1050_Mvc5/Views/TestTypeScript/SubMenu.cshtml
@@ -23,4 +23,8 @@
         <a href="/TestTypeScript/TestAsyncAwait"> 测试 async await 的使用.</a>
     </li>
 
+    <li>
+        <a href="/TestTypeScript/TestInterface"> 测试 interface 的使用.</a>
+    </li>
+
 </ul>
