--- a/W1050_Mvc5/Views/TestTypeScript/TestAsyncAwait.cshtml
+++ b/W1050_Mvc5/Views/TestTypeScript/TestAsyncAwait.cshtml
@@ -20,7 +20,7 @@
 
 <div>
 
-    <button onclick="testRun()"> 测试 Promise.all </button>
+    <button onclick="testRun()"> 测试 async / await </button>
 
 </div>
 
