--- a/W1050_Mvc5/Views/TestMobile/Index.mobile.cshtml
+++ b/W1050_Mvc5/Views/TestMobile/Index.mobile.cshtml
@@ -65,6 +65,11 @@
 
 
 
+        <div>
+            <a href="/TestMobile/TestNews">测试手机新闻页面， 点击新闻图片，出额外的页面</a>
+        </div>
+
+
     </div>
 </body>
 </html>
