W1050_Mvc5 Add fetch sample

--- a/W1050_Mvc5/Views/TestAjax/Index.cshtml
+++ b/W1050_Mvc5/Views/TestAjax/Index.cshtml
@@ -17,4 +17,9 @@
         <a href="/TestAjax/TestStepABC"> 测试同时调用 TestStepA --&gt; TestStepB --&gt; TestStepC </a>
     </li>
 
+
+    <li>
+        <a href="/TestAjax/TestAbort"> 测试发起 Ajax 请求之后，取消后续操作. </a>
+    </li>
+
 </ul>
