CR_HelloWorld_Web Update

--- a/CR_HelloWorld_Web/Views/Report/Index.cshtml
+++ b/CR_HelloWorld_Web/Views/Report/Index.cshtml
@@ -9,6 +9,10 @@
 <ul>
 
     <li>
+        <a href="/ReportViewer/Empty.aspx">不访问任何数据源的空白报表页面 （排除故障时使用）</a>
+    </li>
+
+    <li>
         <a href="/ReportViewer/ReportViewer1.aspx">使用 CrystalReportViewer + CrystalReportSource 实现的报表页面</a>
     </li>
 
