--- a/CR_HelloWorld_Web/Views/Shared/_Layout.cshtml
+++ b/CR_HelloWorld_Web/Views/Shared/_Layout.cshtml
@@ -21,12 +21,18 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("主页", "Index", "Home")</li>
-                    <li>@Html.ActionLink("关于", "About", "Home")</li>
-                    <li>@Html.ActionLink("联系方式", "Contact", "Home")</li>
-
-
-                    <li>@Html.ActionLink("测试报表", "Index", "Report")</li>
+                    <li>
+                        <a href="/Home/Index">主页</a>
+                    </li>
+                    <li>
+                        <a href="/Home/About">关于</a>
+                    </li>
+                    <li>
+                        <a href="/Home/Contact">联系方式</a>
+                    </li>
+                    <li>
+                        <a href="/Report/Index">测试报表</a>
+                    </li>
                 </ul>
 				
 				
