CR_HelloWorld_Web Update

--- a/CR_HelloWorld_Web/Views/Report/Index.cshtml
+++ b/CR_HelloWorld_Web/Views/Report/Index.cshtml
@@ -26,4 +26,9 @@
         <a href="/ReportViewer/ReportViewer3.aspx"> 测试图表的页面 </a>
     </li>
 
+
+    <li>
+        <a href="/ReportViewer/ReportViewer4.aspx"> 测试带参数的报表页面 </a>
+    </li>
+
 </ul>
