Update ConnectionStringBuilder and WebConfigurationManager use sample

--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -117,4 +117,13 @@
     </div>
 
 
+    <div class="col-md-3">
+        <h2> Test Config </h2>
+        <p>
+            测试 Web Config.
+        </p>
+        <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestConfig")'>  Test Config  </a></p>
+    </div>
+
+
 </div>
