Mvc5 i18n test and axios test

--- a/W1030_Mvc_WebApi2/Views/Home/Index.cshtml
+++ b/W1030_Mvc_WebApi2/Views/Home/Index.cshtml
@@ -11,12 +11,23 @@
         </p>
     </div>
 
+
+    <div class="col-md-4">
+        <p>
+            <a href='@Url.Action(actionName: "TestMyDemoAxios", controllerName: "Home")'> 测试 MyDemo (使用 Axios 访问 WebApi) </a>
+        </p>
+    </div>
+
     <div class="col-md-4">
         <p>
             <a href='@Url.Action(actionName: "TestMyDemoKnockout", controllerName: "Home")'> 测试 MyDemo (WebApi + knockout.js) </a>
         </p>
     </div>
 
+</div>
+
+
+<div class="row">
 
     <div class="col-md-4">
         <p>
@@ -25,11 +36,6 @@
     </div>
 
 
-
-</div>
-
-
-<div class="row">
     <div class="col-md-4">
         <p>
             <a href='@Url.Action(actionName: "TestI18n", controllerName: "Home")'> 测试国际化处理 (WebApi) </a>
