--- a/W1050_Mvc5/Views/Shared/_Layout.cshtml
+++ b/W1050_Mvc5/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                 <ul class="nav navbar-right">
                     <li>
                         <select id="changeLang">
-                            <option value="zh">中文</option>
+                            <option value="zh-CN">中文</option>
                             <option value="en">English</option>
                         </select>
                     </li>
