MVC5 404 Page Config

--- a/W1050_Mvc5/Views/TestError/Index.cshtml
+++ b/W1050_Mvc5/Views/TestError/Index.cshtml
@@ -12,4 +12,8 @@
         <a href="/NOTEXISTS"> 测试跳转到一个不存在的地址，然后迁移到 404 页面. </a>
     </li>
 
+    <li>
+        <a href="/TestError/ResultHttpNotFound"> 测试跳转到一个存在的控制器，这个控制器返回 HttpNotFound，然后迁移到 404 页面. </a>
+    </li>
+
 </ul>
