Web Api 验证 ASP.NET 负载均衡配置

--- a/W1030_Mvc_WebApi2/Views/Home/Index.cshtml
+++ b/W1030_Mvc_WebApi2/Views/Home/Index.cshtml
@@ -51,3 +51,15 @@
 
 
 </div>
+
+
+
+
+<div>
+    <div class="col-md-4">
+        <p>
+            <a href='@Url.Action(actionName: "TestNeedLogin", controllerName: "Home")'> 测试需要登录的 Web Api. </a>
+        </p>
+    </div>
+
+</div>
