--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -127,3 +127,19 @@
 
 
 </div>
+
+
+
+
+
+<div class="row">
+
+    <div class="col-md-3">
+        <h2> 负载均衡测试 </h2>
+        <p>
+            测试 均衡测试 的共享 Session 
+        </p>
+        <p><a class="btn btn-default" href='/LoadBalancing/Test'>  Test LoadBalancing  </a></p>
+    </div>
+
+</div>
