--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -126,6 +126,14 @@
     </div>
 
 
+    <div class="col-md-3">
+        <h2> Test Redirect </h2>
+        <p>
+            测试 Redirect.
+        </p>
+        <p><a class="btn btn-default" href='@Url.Action(actionName: "Index", controllerName: "TestRedirect")'>  Test Redirect  </a></p>
+    </div>
+
 </div>
 
 
@@ -143,3 +151,5 @@
     </div>
 
 </div>
+
+
