--- a/W1050_Mvc5/Views/TestAjax/Index.cshtml
+++ b/W1050_Mvc5/Views/TestAjax/Index.cshtml
@@ -22,4 +22,10 @@
         <a href="/TestAjax/TestAbort"> 测试发起 Ajax 请求之后，取消后续操作. </a>
     </li>
 
+
+
+    <li>
+        <a href="/TestAjax/TestStepXYZ"> 测试发起 Ajax 请求之后， 先产生第一个结果， 用这个结果， 产生一个后台线程执行某后台操作，  第二个 Ajax 也用第一个结果，进行计算显示。. </a>
+    </li>
+
 </ul>
