--- a/W1050_Mvc5/Views/Home/Index.cshtml
+++ b/W1050_Mvc5/Views/Home/Index.cshtml
@@ -191,6 +191,17 @@
         <p><a class="btn btn-default" href='/LoadBalancing/Test'>  Test LoadBalancing  </a></p>
     </div>
 
+
+
+    <div class="col-md-3">
+        <h2> Task 的测试 </h2>
+        <p>
+            测试在控制器方法中，使用 Task
+        </p>
+        <p><a class="btn btn-default" href='/TestTask/Index'>  Test Task  </a></p>
+    </div>
+
+
 </div>
 
 
